@@ -1,3 +1,8 @@
+Sun, 10 Sep 2006 22:34:44 +0200 <informancer@web.de>
+	* moved channel update code to channel.
+	* moved rssparser to libpodcast to avoid circular imports.
+
+
 Sun, 10 Sep 2006 20:05:21 +0200 <informancer@web.de>
 	* removed code used for dbus
 
